[gd_scene load_steps=2 format=3 uid="uid://ba44sap453kmu"]

[ext_resource type="Script" path="res://ui/04_templates/cutscene_pause_popup/cutscene_pause_popup.gd" id="1_l48rq"]

[node name="CutscenePausePopup" type="Popup"]
transparent_bg = true
position = Vector2i(0, 36)
size = Vector2i(333, 105)
visible = true
transparent = true
script = ExtResource("1_l48rq")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Cutscene paused"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Skip")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../Skip")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../Skip")
focus_previous = NodePath("../Skip")
button_mask = 0
text = "Resume"

[node name="Skip" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../Resume")
focus_neighbor_top = NodePath(".")
focus_neighbor_right = NodePath("../Resume")
focus_neighbor_bottom = NodePath(".")
focus_next = NodePath("../Resume")
focus_previous = NodePath("../Resume")
button_mask = 0
text = "Skip"

[connection signal="about_to_popup" from="." to="." method="_on_about_to_popup"]
[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/Skip" to="." method="_on_skip_pressed"]
